# automated-lunches

./: pyproject.toml
automated_lunches/: main.py
