[tool.poetry]
name = "automated-lunches"
version = "0.1.0"
description = ""
authors = ["subado <redcatgamer1980@gmail.com>"]
readme = "README.md"
packages = [{include = "automated_lunches"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"

[tool.poetry.scripts]
main = 'automated_lunches.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
